# whisper-android-demo

./: .gitignore  OPTIMIZATION.md  QUICKSTART.md  README.md  build.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_utils.cpp  audio_utils.h  native-lib.cpp
app/src/main/java/com/example/whisperdemo/: AudioRecorder.kt  MainActivity.kt  WhisperService.kt
app/src/main/res/layout/: activity_main.xml  dialog_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
